# game-off-2020

./: README.md  netlify.toml
client/: .eslintrc.json  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
client/assets/: space.json  spaceship.json
client/assets/map/: space.json
client/assets/spaceship/: spaceship.json
client/resources/: planets.xcf  space.tmx  space.tsx  space_tileset.xcf
client/src/: main.ts
client/src/asteroid/: AsteroidGroup.ts
client/src/laser/: Laser.ts
client/src/networking/: MultiplayerEvent.ts  Session.ts
client/src/player/: Player.ts
client/src/scenes/: GameHud.ts  GameScene.ts  MainMenu.ts  Preloader.ts
client/src/session/: GameMode.ts  Session.ts
client/src/utils/: constants.ts  generateSinglePlayerMap.ts  getIndicatorPosition.ts
server/: Cargo.toml
server/src/: events.rs  main.rs  message.rs  server.rs  session.rs
server/src/server/: events.rs  game_objects.rs  map.rs
server/static/: index.html
