[package]
name = "game-on-2020-server"
version = "0.1.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-broker = "0.3"
actix-files = "0.2"
actix-rt = "1"
actix-web = "2"
actix-web-actors = "2"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
rand = "0.7"
serde_json = "1.0"
serde = "1.0.117"
